--- a/HW2/index.html
+++ b/HW2/index.html
@@ -73,7 +73,7 @@
 	<div class="details"><input type = "Submit" value = "Submit">
 	<input type = "Reset" value = "Clear"></div>
 	
-	<a id="info" href="111306045_page2.HTML">Page 2</a>
-	<h1><a href="111306045_page3.HTML"><em>Page 3</em></a></h1>
+	<a id="info" href="http://www.111306045_2.github.io">Page 2</a>
+	<h1><a href="http://www.111306045_3.github.io"><em>Page 3</em></a></h1>
 </body>
 </html>
