--- a/HW2/111306045_page2.HTML
+++ b/HW2/111306045_page2.HTML
@@ -5,75 +5,77 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 	<style type="text/css">
-		p   	{font-family: times new roman;}
-		body	{background-color: blue}
-		h1 em 	{color: white;}
-		li em	{text-decoration: underline;}
-		#info 	{
-			background-color: white;
+		body   	{font-family: cursive;}
+		h1	 	{
+			color: green;
+			font-size: 8pt;
+		}
+		li em	{text-decoration: line-through;}
+		#home 	{
+			background-color: pink;
+			padding:15px;
 			font-size: 20pt;
+			text-align: left;
+		}
+		.name{
+			padding: 10px;
 			text-align: center;
 		}
-		.details{
-			padding: 15px;
-			text-align: center;
-		}
-		span	{color: red;
-				text-decoration: underline;}
+		span	{color: purple;
+				border:1px;}
 		.extra span
 				{color: inherit;}
 
 	</style>
 </head>
 <body>
-	<p><strong><big>New <span>HTML5</span> Input Types Demo</big></strong></p>
-	<p class="extra">This form demonstrates the new HTML5 input types and the placeholder, required and autofocus attributes.</p>
+	
+	<p id="home"><strong><big><big><big><big>New HTML5 Input Types Demo</big></big></big></big></strong></p>
+	<li><p>This form demonstrates the <span>new HTML5 input types and the placeholder,</span> <em>required and autofocus attributes.</em></p></li>
 
-	<li><p><label>Color:
+	<p><label>Color:
 		<input type="color" autofocus />
 			(Hexadecimal code such as #ADD8E6)
 	</label></p>
 
-	<em><p><form action="/action_page.php">
+	<p><form action="/action_page.php">
 		<label for="date">Date:</label>
 		<input type="date" id="date" name="date">
 			(yyyy-mm-dd)
-	</form></p></em></li>
+	</form></p>
 
-	<h1>
-		<em><p><form>
+	
+	<h1><p><form>
 		<label for="email">Email:</label>
 		<input type="email" name="email" placeholder="name@domain.com" required>
 			(name@domain.com)
-	</form></p></em>
+	</form></p></h1>
 
-	<p><form action="/action_page.php">
+	<p><form action="/action_page.php" class="name">
 		<label for="quantity">Number:</label>
 		<input type="number" id="quantity" name="quantity" min="0" max="7" value="4">
 			(Enter a number between 0 and 7)
-	</form></p></h1>
-
+	</form></p>
 	<p><form action="/action_page.php" method="get">
 		<label for="range">Range: 0</label>
-		<input type="range" id="info" name="range" min="0"  max="20">
+		<input type="range" id="range" name="range" min="0"  max="20">
 		<label for="range">20</label>
 	</form></p>
 
-	<p><form action="/action_page.php">
+	<div class="name"><p><form action="/action_page.php">
 		<label for="search">Search:</label>
 		<input type="search" id="search" name="search" placeholder="serach query">
-	</form></p>
+	</form></p></div>
 
-	<p><form action="/action_page.php">
-		<label for="time">Time:</label>
+	<li><p><form action="/action_page.php">
+		<label for="time"><em>Time:</em></label>
 		<input type="time" id="time" name="time" placeholder="--:-- --">
 			(hh:mm)
-	</form></p>		
+	</form></p></li>
 
-	<div class="details"><input type = "Submit" value = "Submit">
-	<input type = "Reset" value = "Clear"></div>
+	<input type = "Submit" value = "Submit">
+	<input type = "Reset" value = "Clear">
 	
-	<a id="info" href="111306045_page2.HTML">Page 2</a>
-	<h1><a href="111306045_page3.HTML"><em>Page 3</em></a></h1>
+	
 </body>
 </html>
